Fix aspect ratio for images on small screens

--- a/assets/shared.css
+++ b/assets/shared.css
@@ -3357,7 +3357,7 @@
   @media (max-width: 29.9em) {
     .activity-item > .source:first-child img {
       width  : 2.5em; /* 30px / font-size(12px) */
-      height : 2.5em;
+      height : auto;
     }
   }
 
